[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write_to = "pymeasure/_version.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "pymeasure-keysight-e5071"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.1"
pint = "^0.24.3"
numpy = "^2.0.1"
scikit-rf = "^1.0.0"
jupyterlab = "^4.0.10"
ipywidgets = "^8.1.1"
ipykernel = "^6.29.0"
pyserial = "^2.7.0"
pyqtgraph = "^0.12.0"
pandas = "^0.14"
