[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write_to = "pymeasure/_version.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "pymeasure"
version = "0.1.0"
description = ""
authors = ["none <none>"]

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.1"
pint = "^0.24.3"
numpy = "^2.0.1"
scikit-rf = "^1.2.0"
jupyterlab = "^4.0.10"
ipywidgets = "^8.1.1"
ipykernel = "^6.29.0"
pyserial = "^3.5.0"
pyqtgraph = "^0.13.7"
pandas = "^2.0"
